jsoup-4-generated-mutants-full/aux.log
/mnt/c/Users/localadmin/repos/jsoup/jsoup_4/generated-mutants-full/99/Entities.java:34: error: cannot find symbol
        for (int pos = 0; pos < string.length(); p++) {
                                                 ^
  symbol:   variable p
  location: class Entities
1 error
